kubernetes/apps/default/elgato-photo/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: elgato-photo
spec:
  parentRefs:
    - name: external
      namespace: kube-system
      sectionName: https
    - name: envoy-external
      namespace: network
      sectionName: https
  hostnames:
    - elgato-photo.g-eye.io
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: elgato-photo
          port: 3000
